@@ -18,8 +18,9 @@ final class Deprecations {
         javaClass.getFieldAccessesFromSelf().stream()
             .filter(access -> access.getTarget().isAnnotatedWith(Deprecated.class))
             .forEach(access -> events.add(SimpleConditionEvent.violated(access.getTarget(),
-                String.format("Field %s in class %s is deprecated and is being accessed by %s",
-                    access.getTarget().getName(), access.getTarget().getOwner().getName(),
+                "Field %s in class %s is deprecated and is being accessed by %s".formatted(
+                    access.getTarget().getName(),
+                    access.getTarget().getOwner().getName(),
                     javaClass.getName()))));
 
         javaClass.getMethodCallsFromSelf().stream()
@@ -27,9 +28,11 @@ final class Deprecations {
             .filter(method -> !method.getTarget().getName().equals(Enum.class.getName()))
             .filter(method -> method.getTarget().isAnnotatedWith(Deprecated.class) ||
                 method.getTarget().getRawReturnType().isAnnotatedWith(Deprecated.class) ||
-                method.getTarget().getParameterTypes().stream().anyMatch(Deprecations::isDeprecated))
+                method.getTarget().getParameterTypes().stream()
+                    .anyMatch(Deprecations::isDeprecated))
             .forEach(method -> events.add(SimpleConditionEvent.violated(method,
-                String.format("Method %s used in class %s is deprecated", method.getName(),
+                "Method %s used in class %s is deprecated".formatted(
+                    method.getName(),
                     javaClass.getName()))));
 
         javaClass.getConstructorCallsFromSelf().stream()
@@ -37,14 +40,16 @@ final class Deprecations {
                 constructor.getTarget().getParameterTypes().stream()
                     .anyMatch(Deprecations::isDeprecated))
             .forEach(constructor -> events.add(SimpleConditionEvent.violated(constructor,
-                String.format("Constructor %s in class %s uses deprecated APIs",
-                    constructor.getTarget().getFullName(), javaClass.getName()))));
+                "Constructor %s in class %s uses deprecated APIs".formatted(
+                    constructor.getTarget().getFullName(),
+                    javaClass.getName()))));
 
         javaClass.getDirectDependenciesFromSelf().stream()
             .filter(dependency -> dependency.getTargetClass().isAnnotatedWith(Deprecated.class))
             .forEach(dependency -> events.add(
                 SimpleConditionEvent.violated(dependency.getTargetClass(),
-                    String.format("Class %s depends on deprecated class %s", javaClass.getName(),
+                    "Class %s depends on deprecated class %s".formatted(
+                        javaClass.getName(),
                         dependency.getTargetClass().getName()))));
       }
     }.as("no usage of deprecated APIs");
