@@ -1,9 +1,11 @@
 package com.enofex.taikai.java;
 
+import static com.enofex.taikai.internal.Modifiers.isFieldProtected;
+import static com.enofex.taikai.internal.Modifiers.isMethodProtected;
+
 import com.tngtech.archunit.core.domain.JavaClass;
 import com.tngtech.archunit.core.domain.JavaField;
 import com.tngtech.archunit.core.domain.JavaMethod;
-import com.tngtech.archunit.core.domain.JavaModifier;
 import com.tngtech.archunit.lang.ArchCondition;
 import com.tngtech.archunit.lang.ConditionEvents;
 import com.tngtech.archunit.lang.SimpleConditionEvent;
@@ -18,17 +20,20 @@ final class ProtectedMembers {
       @Override
       public void check(JavaClass javaClass, ConditionEvents events) {
         for (JavaField field : javaClass.getFields()) {
-          if (field.getModifiers().contains(JavaModifier.PROTECTED)) {
-            String message = String.format("Field %s in final class %s is protected",
-                field.getName(), javaClass.getName());
-            events.add(SimpleConditionEvent.violated(field, message));
+          if (isFieldProtected(field)) {
+            events.add(SimpleConditionEvent.violated(field,
+                "Field %s in final class %s is protected".formatted(
+                    field.getName(),
+                    javaClass.getName())));
           }
         }
+
         for (JavaMethod method : javaClass.getMethods()) {
-          if (method.getModifiers().contains(JavaModifier.PROTECTED)) {
-            String message = String.format("Method %s in final class %s is protected",
-                method.getName(), javaClass.getName());
-            events.add(SimpleConditionEvent.violated(method, message));
+          if (isMethodProtected(method)) {
+            events.add(SimpleConditionEvent.violated(method,
+                "Method %s in final class %s is protected".formatted(
+                    method.getName(),
+                    javaClass.getName())));
           }
         }
       }
